# babycare-ai-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  next.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo
.claude/: CLAUDE.md  settings.local.json
.q/specs/: daily-health-report.md  data-scientist-dynamodb.md  medical-expert-bedrock-rag.md  social-researcher-xhs-mcp.md
amplify/: backend.ts
amplify/data/: resource.ts
app/: globals.css  layout.tsx  page.tsx
app/ask/: page.tsx
app/baby/[id]/: page.tsx
deploy/: .env.example  DEPLOY.md  Dockerfile  Dockerfile.xhs-mcp  chrome-with-profile.sh  docker-compose.yml  supervisord-xhs.conf
deploy/fargate/: .env.example  cloudformation.yaml  deploy.sh
deploy/scripts/: health-check.sh  setup-ec2.sh
docs/: optimization-log.md
eval/: baseline.json  gold_dataset.json
ios/: README.md
ios/CalmDownDad/CalmDownDad.xcodeproj/: project.pbxproj
ios/NurtureMind/App/: ContentView.swift  NurtureMindApp.swift
ios/NurtureMind/Models/: Baby.swift  ContextEvent.swift  Enums.swift  PhysiologyLog.swift
lib/: agent-api.ts  amplify-utils.ts
scripts/: setup.sh  test-all.sh
src/agent/: config.py  main.py
src/agent/agents/: data_scientist.py  (+3 more)
src/api/: auth.py  dynamodb_crud.py  server.py
src/eval/: __init__.py  judge.py  models.py  runner.py  test_eval.py
tests/: test_critique.py  test_daily_report.py  test_data_scientist.py  test_dynamodb.py  test_graph_structure.py  test_medical_expert.py  test_models.py  test_social_researcher.py  test_source_transparency.py
(+66 files in other folders)
