[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nurturemind-agent"
version = "0.1.0"
description = "Multi-Agent parenting advisor powered by LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-aws>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.10.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
prod = ["langgraph-checkpoint-aws"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
